# flavorful

./: .dockerignore  Dockerfile  PRIVACY_POLICY.md  README.md  fly.toml  main.py  pyproject.toml  recipe_dao.py  recipe_extractor.py  url_extractor.py  url_safety.py
flavorful-ios/: README.md  pubspec.yaml
flavorful-ios/design_handoff_flutter_ios/: Flavorful.dc.html  README.md
flavorful-ios/docs/specs/: 2026-06-24-flavorful-ios-design.md
flavorful-ios/ios/Runner/: Info.plist  PrivacyInfo.xcprivacy
flavorful-ios/ios/Runner.xcodeproj/: project.pbxproj
flavorful-ios/lib/: config.dart  main.dart
flavorful-ios/lib/data/: auth_repository.dart  http_recipe_repository.dart  mock_recipe_repository.dart  recipe_repository.dart  sample_data.dart  supabase_auth_repository.dart
flavorful-ios/lib/models/: recipe.dart
flavorful-ios/lib/providers/: providers.dart
flavorful-ios/lib/screens/: library_screen.dart  recipe_detail_screen.dart  sign_in_screen.dart
flavorful-ios/lib/theme/: tokens.dart
flavorful-ios/lib/util/: fractions.dart  launch.dart  url_validation.dart
flavorful-ios/lib/widgets/: account_avatar.dart  app_icons.dart  ingredient_checkbox.dart  method_step.dart  original_page_cta.dart  profile_sheet.dart  recipe_card.dart  save_island.dart  section_header.dart  servings_stepper.dart  source_eyebrow.dart  (+2 more)
flavorful-ios/test/: fractions_test.dart  library_cards_persist_during_reload_test.dart  recipes_refetch_on_token_change_test.dart  servings_known_test.dart  servings_scaling_test.dart  widget_test.dart
flavorful-ios/web/: index.html  manifest.json
(+4 files in other folders)
